--- a/custom.less
+++ b/custom.less
@@ -265,8 +265,8 @@ html, body {
 }
 
 #ilAll {
-	background: url("./images/login-page-bg.jpg") no-repeat;
-    background-size: 100% 100%;
+	/* background: url("./images/login-page-bg.jpg") no-repeat;
+    background-size: 100% 100%; */
     position: relative;
 	height: auto !important;
 	min-height: calc(~"100% - 1px");
@@ -568,7 +568,7 @@ div.ilFrame {
 }
 
 .ilFixedTopSpacer {
-	padding-top:  ;
+	padding-top: @il-fixed-menu-height;
 }
 
 .ilFixedTopSpacerBarOnly {
