--- a/default.css
+++ b/default.css
@@ -1,5 +1,5 @@
 body {
-	color:#222222;
+	color:#ff0000;
 	background-color:#dddddd;
 	font-family:Verdana,Arial,Helvetica,sans-serif;
 	font-size:13px;
