--- a/less/Services/Block/delos.less
+++ b/less/Services/Block/delos.less
@@ -1,7 +1,7 @@
 /* Services/Block */
 
 .iosPdBlockDragAndDropPlaceholder {
-	border: 3px #C0C0C0 dashed;
+	border: 3px dashed #c0c0c0;
 	border-radius: 8px;
 	margin-bottom: 15px;
 }
@@ -10,17 +10,17 @@
 
 div.il_Block, table.il_Block {
 	width: 100%;
-	border-spacing:0px;
-	border-collapse:collapse;
+	border-spacing: 0px;
+	border-collapse: collapse;
 	margin-bottom: 20px;
 	clear: both;
 	table-layout: fixed;
 	word-wrap: break-word;
 	background-color: @il-secondary-container-bg;
-	border: 1px solid lighten(@mid-gray, 95%);
+	border: none;
 	text-align: left;
 	padding: 5px;
-	box-shadow: 0px 1px 3px 0px #ccc;
+	//box-shadow: 0px 1px 3px 0px lighten(@mid-gray, 45%);
 }
 
 #il_center_col div.il_Block {
@@ -44,8 +44,7 @@ div.ilBlockHeaderBig, td.ilBlockHeaderBig {
 }
 
 h3.ilBlockHeader {
-	font-family: 'Open Sans Semibold';
-	font-weight: normal;
+	font-weight: 600;
 	margin: 0;
 	padding: 0;
 	font-size: 100%;
@@ -74,7 +73,7 @@ div.ilBlockContent {
 
 .ilBlockRow1, .ilBlockRow2 {
 	padding: 3px;
-	border-bottom: 1px solid #F0F0F0;
+	border-bottom: 1px solid #f0f0f0;
 }
 
 div.ilBlockPropertyCaption {
