--- a/less/Services/Init/delos.less
+++ b/less/Services/Init/delos.less
@@ -31,6 +31,7 @@ div.ilStartupSection form.form-horizontal {
 }
 
 div#il_startup_logo img {
-	width: 93px;
+	width: 50px;
+	height: 50px;
 	margin: 15px;
 }
