--- a/less/Services/UIComponent/Button/delos.less
+++ b/less/Services/UIComponent/Button/delos.less
@@ -25,7 +25,7 @@ button.btn:not(.btn-link) > span:first-child:not(:empty) {
 		background-color: lighten(@degradeColor, 2%);
 		#gradient > .vertical(lighten(@startColor, 1%), lighten(@endColor, 1%), @startPercent, @endPercent);
 		.reset-filter();
-		box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
+        .box-shadow(0 0 2px rgba(0, 0, 0, 0.2));
 	}
 	&:active {
 		color: @color;
@@ -33,7 +33,7 @@ button.btn:not(.btn-link) > span:first-child:not(:empty) {
 		background-color: darken(@degradeColor, 1%);
 		#gradient > .vertical(darken(@startColor, 1%), darken(@endColor, 1%), @startPercent, @endPercent);
 		.reset-filter();
-		box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05) inset;
+        .box-shadow(inset 0 2px 2px rgba(0, 0, 0, 0.05));
 	}
 }
 /*
@@ -45,7 +45,7 @@ button.btn:not(.btn-link) > span:first-child:not(:empty) {
 //overwrite buttons styles + add new one
 //@color @background @border
 .btn-default {
-  .button-variant(white; lighten(@mid-gray, 15%); lighten(@mid-gray, 15%));
+  .button-variant(white; lighten(@brand-primary, 15%); lighten(@brand-primary, 15%));
 }
 .btn-primary {
   .button-variant(white; @brand-secondary; @brand-secondary);
@@ -55,7 +55,7 @@ button.btn:not(.btn-link) > span:first-child:not(:empty) {
 }
 .btn-link {
   color: @link-color;
-  border: none;
+  border: 0 none;
   background-color: transparent;
   &:hover,
   &:focus,
@@ -66,6 +66,22 @@ button.btn:not(.btn-link) > span:first-child:not(:empty) {
   }
 }
 
+.btn {
+    &.disabled,
+    &[disabled],
+    fieldset[disabled] & {
+        &,
+        &:hover,
+        &:focus,
+        &:active,
+        &.active {
+            background-color: @disabled-btn-bg;
+            border-color: @disabled-btn-border;
+            color: @disabled-btn-color;
+            cursor: default;
+        }
+    }
+}
 
 /* old stuff */
 
@@ -75,4 +91,26 @@ a.ilSubmitInactive, a.ilSubmitInactive:hover , a.ilSubmitInactive:active {
 	background-color: #b0b0b0;
 	border-color: #b0b0b0;
 	cursor: default;
+}
+
+.split-btn ul {
+	min-width: 180px
+}
+
+.split-btn-default {
+	float: left
+}
+
+.btn-split.dropdown-toggle {
+	border-left: 1px solid white;
+	&:hover,
+	&:focus,
+	&:active {
+		border-left: 1px solid white;
+	}
+}
+
+// #16322
+button > .glyphicon {
+   pointer-events: none;
 }
